--- a/MyCRUD/src/main/resources/application.yml
+++ b/MyCRUD/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8000
   #  ?? ?? 8000 ??? ????? ?
   servlet:
-    context-path: /library
+    context-path: /library/
     # /blog ?? ??? ??? ??? ?? ??
     encoding:
       charset: UTF-8
