--- a/MyCRUD/src/main/resources/application.yml
+++ b/MyCRUD/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8000
   #  ?? ?? 8000 ??? ????? ?
   servlet:
-    context-path: /library/
+    context-path: /api/
     # /blog ?? ??? ??? ??? ?? ??
     encoding:
       charset: UTF-8
@@ -21,7 +21,7 @@ spring:
     open-in-view: true
     hibernate:
       #ddl auto? create? ?? ????? ? ?? ???? ???? ?? ??? ? , update? ?? ??? ?? ???? ??? ??? ,none? ??
-      ddl-auto: create
+      ddl-auto: update
       naming:
         #physicalNamingStrategyStandardImpl: entity(mysql? ???)? ??? ??? ??? ?????? feed? ????
         #SpringPhysicalNamingStrategy:camel????? ??? ???? snake????? ??? ?????? feed? ??
